# brGBA

./: .gitignore  CMakeLists.txt
core/include/: bus.h  bus_constants.h  constants.h  cpu.h  cpu_constants.h  debug_constants.h  gba_core.h  typedefs.h
core/src/: bus.cpp  cpu.cpp
core_test/assembly/: bubblesort.asm  fibonacci.asm
core_test/include/: cpu_test.h
core_test/src/: cpu_test.cpp  main.cpp
